[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job_hunt_sankey"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
description = "Short description."
authors = [{ name = "Ana Sofia Carmo", email = "anascacais@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
 
]

[project.urls]
Repository = "https://github.com/anascacais/job_hunt_sankey"

[tool.setuptools.dynamic]
version = {attr = "job_hunt_sankey.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["job_hunt_sankey"]